DASH-150 Revised pager so it gets updated when items disappear.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313112 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
@@ -17,7 +17,7 @@
                 </ul>
             </div>
             <div class="pagerCell">
-                <span class="itemCount instruction" wicket:id="newsLinksCount">[[ cero puntos ]]</span>
+                <!-- <span class="itemCount instruction" wicket:id="newsLinksCount">[[ cero puntos ]]</span> -->
                 <span class="pager" wicket:id="newsNavigator"></span>
             </div>
             <div class="panel" wicket:id="haveLinks">
