--- a/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
@@ -19,7 +19,7 @@
                     </li>
                 </ul>
                 <div class="pagerCell">
-                    <span class="itemCount instruction" wicket:id="calendarLinksCount">[[ cero puntos ]]</span>
+                    <!-- <span class="itemCount instruction" wicket:id="calendarLinksCount">[[ cero puntos ]]</span>  -->
                     <span class="pager" style="float:right" wicket:id="calendarNavigator"></span>
                 </div>
             </div>
