DASH-155 - change error message
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313120 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -38,7 +38,7 @@
 	                <div id="instructionHolder" style="display:none">
 	                </div>
 	                <span id="genericErrorMessage" style="display:none">
-	                    Oops. Are you logged out perhaps?
+	                    You may have logged out or the item is no longer available.
                     </span>    
 	                <script type="text/javascript">
 	                    $(document).ready(function(){
