DASH-155 Added generic error message to language bundle. Java code passes error message from bundle to html page.  Page includes error message.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313121 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -37,8 +37,8 @@
 	                
 	                <div id="instructionHolder" style="display:none">
 	                </div>
-	                <span id="genericErrorMessage" style="display:none">
-	                    You may have logged out or the item is no longer available.
+	                <span id="genericErrorMessage" wicket:id="genericErrorMessage" style="display:none">
+	                	[[ You may have logged out or the item is no longer available. ]]
                     </span>    
 	                <script type="text/javascript">
 	                    $(document).ready(function(){
