DASH-174 Remove label for grouped items.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313141 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
@@ -56,7 +56,7 @@
                         </td>
                         <td class="tab three">
                             <img wicket:id="icon" class="itemIcon"/><a href="#" wicket:id="itemLink" class="itemLink" target="_top">[item title]</a>
-                            <span wicket:id="itemLabel" class="itemLabel">[Item Label]</span>
+                            <span wicket:id="itemLabel">[Item Label]</span> <!-- class="itemLabel" will be added programmatically unless label is empty -->
                         </td>
                         <td class="four">
                             <a href="#" wicket:id="siteLink" class="siteLink" target="_top">[site title]</a>
