DASH-149 Use MOTD id and timestamp in cookie to show or hide MOTD after it has been dismissed.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313143 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/panels/MOTDPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/MOTDPanel.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
     <wicket:panel>
         <div id="motdTextDiv" wicket:id="motdTextDiv">
+        	<span wicket:id="motdId" class="motdId" style="display:none;">XXX</span>
            	<a id="motdTextDivDismiss" href="#" title="Hide this message for the session">x</a> 
            	<h3 wicket:id="motdPanelTitle">[[ Message of the day ]]</h3> 
             <h4 wicket:id="motdTitle">[[ MOTD Title ]]</h4>
