--- a/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
@@ -1,76 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
     <wicket:panel>
-        <div id="activeCalendarItems" wicket:id="calendarLinksDiv" class="mainPanel">
+        <div id="activeCalendarItems" wicket:id="calendarLinksDiv" class="mainPanel" role="application" aria-labelledby="calendarHead">
             <div class="listHeader">
-                <h3 class="withNav" wicket:id="calendarTitle">[[ Calendar ]]</h3>
-                <ul class="tabPanel">
-                    <li wicket:id="upcomingCalendarTab"ap>
-                        <a href="#" wicket:id="link"><span wicket:id="label">[ Upcoming ]</span></a>
+                <h3 class="withNav" wicket:id="calendarTitle" id="calendarHead">[[ Calendar ]]</h3>
+                <ul class="tabPanel" role="tabpanel">
+                    <li wicket:id="upcomingCalendarTab">
+                        <a href="#" wicket:id="link"  role="tab" aria-controls="schedPanel"><span wicket:id="label">[ Upcoming ]</span></a>
                     </li>
                     <li wicket:id="starredCalendarTab">
-                        <a href="#" wicket:id="link"><span wicket:id="label">[ Starred ]</span></a>
+                        <a href="#" wicket:id="link" role="tab" aria-controls="schedPanel"><span wicket:id="label">[ Starred ]</span></a>
                     </li>
                     <li wicket:id="hiddenCalendarTab">
-                        <a href="#" wicket:id="link"><span wicket:id="label">[ Hidden ]</span></a>
+                        <a href="#" wicket:id="link" role="tab" aria-controls="schedPanel"><span wicket:id="label">[ Hidden ]</span></a>
                     </li>
                     <li wicket:id="pastCalendarTab">
-                        <a href="#" wicket:id="link"><span wicket:id="label">[ Past ]</span></a>
+                        <a href="#" wicket:id="link"  role="tab" aria-controls="schedPanel"><span wicket:id="label">[ Past ]</span></a>
                     </li>
                 </ul>
                 <div class="pagerCell">
-                    <!-- <span class="itemCount instruction" wicket:id="calendarLinksCount">[[ cero puntos ]]</span>  -->
-                    <span class="pager" style="float:right" wicket:id="calendarNavigator"></span>
+                    <!-- <span class="itemCount instruction" wicket:id="calendarLinksCount">[[ cero puntos ]]</span>  --><span class="pager" style="float:right" wicket:id="calendarNavigator"></span>
                 </div>
             </div>
-            <div class="panel" wicket:id="haveLinks">
-                <table cellspacing="0" id="sched" class="sched" summary="List of upcoming tasks. Column 1: date and time when task is due. Column 2: task title and link to get more details. Column 3: link to site where task originated. Column 4: list of options managing items of this type or origin." border="0">
-                    <thead>
-                        <tr class="header">
-                            <th scope="col" class="one date">
-                                Date and Time
-                            </th>
-                            <th scope="col" class="two">
-                                Title
-                            </th>
-                            <th scope="col" class="three">
-                                From site
-                            </th>
-                            <th class="four">
-                                Star
-                            </th>
-                            <th class="five">
-                                Hide
-                            </th>
+            <div id ="schedPanel" tabindex="-1">
+                <div class="panel" wicket:id="haveLinks">
+                    <table cellspacing="0" id="sched" class="sched" summary="List of upcoming tasks. Column 1: date and time when task is due. Column 2: task title and link to get more details. Column 3: link to site where task originated. Column 4: list of options managing items of this type or origin." border="0">
+                        <thead>
+                            <tr class="header">
+                                <th scope="col" class="one date">
+                                    Date and Time
+                                </th>
+                                <th scope="col" class="two">
+                                    Title
+                                </th>
+                                <th scope="col" class="three">
+                                    From site
+                                </th>
+                                <th class="four">
+                                    Star
+                                </th>
+                                <th class="five">
+                                    Hide
+                                </th>
+                            </tr>
+                        </thead>
+                        <tr class="" id="item1" wicket:id="calendarItems">
+                            <td class="one date">
+                                <span wicket:id="calendarDate">[Date]</span>
+                                <span wicket:id="itemType" class="itemType" style="display:none;">[item type]</span>
+                                <span wicket:id="itemCount" class="itemCount" style="display:none;">[item count]</span>
+                                <span wicket:id="entityReference" class="entityReference" style="display:none;">[entity reference]</span>
+                            </td>
+                            <td class="tab two">
+                                <img wicket:id="icon" class="itemIcon"/><a href="#" wicket:id="itemLink" class="itemLink" target="_top">[Item Title]</a>
+                                <span wicket:id="itemLabel" class="itemLabel">[Item Label]</span>
+                            </td>
+                            <td class="three">
+                                <a href="#" wicket:id="siteLink" class="siteLink" target="_top">[Site Title]</a>
+                            </td>
+                            <td class="action four">
+                                <a href="#" wicket:id="starringAction"><img wicket:id="starringActionIcon" alt="[ Star/Unstar This ]" src="#" /></a>
+                            </td>
+                            <td class="action five">
+                                <a href="#" wicket:id="hidingAction"><img wicket:id="hidingActionIcon" alt="[ Hide/Show This ]" src="#" /></a>
+                            </td>
                         </tr>
-                    </thead>
-                    <tr class="" id="item1" wicket:id="calendarItems">
-                        <td class="one date">
-                            <span wicket:id="calendarDate">[Date]</span>
-                            <span wicket:id="itemType" class="itemType" style="display:none;">[item type]</span>
-                            <span wicket:id="itemCount" class="itemCount" style="display:none;">[item count]</span>
-                            <span wicket:id="entityReference" class="entityReference" style="display:none;">[entity reference]</span>
-                        </td>
-                        <td class="tab two">
-                            <img wicket:id="icon" class="itemIcon"/><a href="#" wicket:id="itemLink" class="itemLink" target="_top">[Item Title]</a>
-                            <span wicket:id="itemLabel" class="itemLabel">[Item Label]</span>
-                        </td>
-                        <td class="three">
-                            <a href="#" wicket:id="siteLink" class="siteLink" target="_top">[Site Title]</a>
-                        </td>
-                        <td class="action four">
-                            <a href="#" wicket:id="starringAction"><img wicket:id="starringActionIcon" alt="[ Star/Unstar This ]" src="#" /></a>
-                        </td>
-                        <td class="action five">
-                            <a href="#" wicket:id="hidingAction"><img wicket:id="hidingActionIcon" alt="[ Hide/Show This ]" src="#" /></a>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-            <div wicket:id="haveNoLinks">
-                <p wicket:id="message">
-                    [[ I got nothing for ya. ]]
-                </p>
+                    </table>
+                </div>
+                <div wicket:id="haveNoLinks">
+                    <p wicket:id="message">
+                        [[ I got nothing for ya. ]]
+                    </p>
+                </div>
             </div>
         </div>
     </wicket:panel>
