DASH-272 - tear down and reasemble pages and panels (as well as the js) so that it can be used in borwser and mobile views
git-svn-id: https://source.sakaiproject.org/svn/dashboard/branches/DASH-269@313476 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardPage.html
@@ -10,9 +10,10 @@
             			TODO: These script and link tags need to be moved to the head tag.  
             			Wicket can include them in the head tag if done properly from the java code. 
             		-->
-            		<link rel="stylesheet" type="text/css" href="/library/js/jquery/ui/1.8.4/css/ui-lightness/jquery-ui-1.8.4.full.css" />>
-            		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"/>
-            		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-responsive.min.css"/>
+                      <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
+                    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-responsive.min.css" />
+                    
+	                <link rel="stylesheet" type="text/css" href="/library/js/jquery/ui/1.8.4/css/ui-lightness/jquery-ui-1.8.4.full.css" />
 	                <script type="text/javascript" src="/library/js/jquery/1.4.2/jquery-1.4.2.min.js">
 	                </script>
 	                <script type="text/javascript" src="/library/js/jquery/ui/1.8.4/jquery-ui-1.8.4.full.min.js">
