--- a/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
@@ -6,7 +6,7 @@
                 <h3 class="withNav" wicket:id="calendarTitle" id="calendarHead">[[ Calendar ]]</h3>
                 <ul class="tabPanel" role="tabpanel">
                     <li wicket:id="upcomingCalendarTab">
-                        <a href="#" wicket:id="link"  role="tab" aria-controls="schedPanel"><span wicket:id="label">[ Upcoming ]</span></a>
+                        <a href="#" wicket:id="link" role="tab" aria-controls="schedPanel"><span wicket:id="label">[ Upcoming ]</span></a>
                     </li>
                     <li wicket:id="starredCalendarTab">
                         <a href="#" wicket:id="link" role="tab" aria-controls="schedPanel"><span wicket:id="label">[ Starred ]</span></a>
@@ -15,7 +15,7 @@
                         <a href="#" wicket:id="link" role="tab" aria-controls="schedPanel"><span wicket:id="label">[ Hidden ]</span></a>
                     </li>
                     <li wicket:id="pastCalendarTab">
-                        <a href="#" wicket:id="link"  role="tab" aria-controls="schedPanel"><span wicket:id="label">[ Past ]</span></a>
+                        <a href="#" wicket:id="link" role="tab" aria-controls="schedPanel"><span wicket:id="label">[ Past ]</span></a>
                     </li>
                 </ul>
                 <div class="pagerCell">
@@ -24,52 +24,27 @@
             </div>
             <div id ="schedPanel" tabindex="-1">
                 <div class="panel" wicket:id="haveLinks">
-                    <table cellspacing="0" id="sched" class="sched" summary="List of upcoming tasks. Column 1: date and time when task is due. Column 2: task title and link to get more details. Column 3: link to site where task originated. Column 4: list of options managing items of this type or origin." border="0">
-                        <thead>
-                            <tr class="header">
-                                <th scope="col" class="one date">
-                                    Date and Time
-                                </th>
-                                <th scope="col" class="two">
-                                    Title
-                                </th>
-                                <th scope="col" class="three">
-                                    From site
-                                </th>
-                                <th class="four">
-                                    Star
-                                </th>
-                                <th class="five">
-                                    Hide
-                                </th>
-                            </tr>
-                        </thead>
-                        <tr class="" id="item1" wicket:id="calendarItems">
-                            <td class="one date">
+                    <ul class="itemList">
+                        <li class="row-fluid" id="item1" wicket:id="calendarItems">
+                            <div class="one date span4">
                                 <span wicket:id="calendarDate">[Date]</span>
                                 <span wicket:id="itemType" class="itemType" style="display:none;">[item type]</span>
                                 <span wicket:id="itemCount" class="itemCount" style="display:none;">[item count]</span>
                                 <span wicket:id="entityReference" class="entityReference" style="display:none;">[entity reference]</span>
-                            </td>
-                            <td class="tab two">
-                                <img wicket:id="icon" class="itemIcon"/>
-                                <a href="#" wicket:id="itemLink" class="itemLink" target="_top">
-                                	<span wicket:id="itemTitle">[ Item Title ]</span>
-                                	<span wicket:id="itemClick" class="skip">[ (click to view details) ]</span>
-                                </a>
+                            </div>
+                            <div class="tab two span4">
+                                <img wicket:id="icon" class="itemIcon"/><a href="#" wicket:id="itemLink" class="itemLink" target="_top"><span wicket:id="itemTitle">[ Item Title ]</span><span wicket:id="itemClick" class="skip">[ (click to view details) ]</span></a>
                                 <span wicket:id="itemLabel" class="itemLabel">[Item Label]</span>
-                            </td>
-                            <td class="three">
+                            </div>
+                            <div class="three span2">
                                 <a href="#" wicket:id="siteLink" class="siteLink" target="_top">[Site Title]</a>
-                            </td>
-                            <td class="action four">
+                            </div>
+                            <div class="action four span2">
                                 <a href="#" wicket:id="starringAction"><img wicket:id="starringActionIcon" alt="[ Star/Unstar This ]" src="#" /></a>
-                            </td>
-                            <td class="action five">
                                 <a href="#" wicket:id="hidingAction"><img wicket:id="hidingActionIcon" alt="[ Hide/Show This ]" src="#" /></a>
-                            </td>
-                        </tr>
-                    </table>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
                 <div wicket:id="haveNoLinks">
                     <p wicket:id="message">
