--- a/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
@@ -21,40 +21,18 @@
             </div>
             <div id="newsPanel" tabindex="-1">
                 <div class="panel" wicket:id="haveLinks">
-                    <table cellspacing="0" id="news" class="news" summary="List of recent events. Column 1: link to details on item. Column 2: link to site where event took place. Column 3: date and time when event took place. Column 4: list of options managing items of this type or origin." border="0">
-                        <thead>
-                            <tr class="header">
-                                <th scope="col" class="one">
-                                    Hidden
-                                </th>
-                                <th scope="col" class="two">
-                                    What
-                                </th>
-                                <th scope="col" class="three">
-                                    From where
-                                </th>
-                                <th scope="col" class="four">
-                                    When
-                                </th>
-                                <th class="five">
-                                    Star
-                                </th>
-                                <th class="six">
-                                    Hide
-                                </th>
-                            </tr>
-                        </thead>
-                        <tr class="alt newsLink" id="item11" wicket:id="newsLinks">
-                            <td class="one">
-                                <span wicket:id="itemType" class="itemType" style="display:none;">[item type]</span>
-                                <span wicket:id="itemCount" class="itemCount" style="display:none;">[item count]</span>
-                                <span wicket:id="entityReference" class="entityReference" style="display:none;">[entity reference]</span>
-                                <span class="offset" style="display:none">0</span>
-                            </td>
-                            <td class="two date">
+                    <ul class="itemList">
+                        <li class="alt newsLink row-fluid" id="item11" wicket:id="newsLinks">
+                            <div class="one" style="display:none">
+                                <span wicket:id="itemType" class="itemType">[item type]</span>
+                                <span wicket:id="itemCount" class="itemCount">[item count]</span>
+                                <span wicket:id="entityReference" class="entityReference">[entity reference]</span>
+                                <span class="offset">0</span>
+                            </div>
+                            <div class="two date span4" style="margin-left:0">
                                 <span wicket:id="newsTime">[news time]</span>
-                            </td>
-                            <td class="tab three">
+                            </div>
+                            <div class="tab three  span4">
                                 <img wicket:id="icon" class="itemIcon"/>
                                 <a href="#" wicket:id="itemLink" class="itemLink" target="_top">
                                 	<span wicket:id="itemTitle">[ Item Title ]</span>
@@ -62,18 +40,16 @@
                                 </a>
                                 <span wicket:id="itemLabel">[Item Label]</span>
                                 <!-- class="itemLabel" will be added programmatically unless label is empty -->
-                            </td>
-                            <td class="four">
+                            </div>
+                            <div class="four  span2">
                                 <a href="#" wicket:id="siteLink" class="siteLink" target="_top">[site title]</a>
-                            </td>
-                            <td class="action five">
+                            </div>
+                            <div class="action five span2">
                                 <a href="#" wicket:id="starringAction"><img wicket:id="starringActionIcon" alt="[ Star/Unstar This ]" src="#" /></a>
-                            </td>
-                            <td class="action six">
                                 <a href="#" wicket:id="hidingAction"><img wicket:id="hidingActionIcon" alt="[ Hide/Show This ]" src="#" /></a>
-                            </td>
-                        </tr>
-                    </table>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
                 <div wicket:id="haveNoLinks">
                     <p wicket:id="message">
