--- a/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
@@ -4,7 +4,7 @@
         <div id="activeCalendarItems" wicket:id="calendarLinksDiv" class="mainPanel" role="application" aria-labelledby="calendarHead">
             <div class="listHeader">
                 <h3 class="withNav" wicket:id="calendarTitle" id="calendarHead">[[ Calendar ]]</h3>
-                <ul class="tabPanel" role="tabpanel">
+                <ul class="nav nav-tabs" role="tabpanel">
                     <li wicket:id="upcomingCalendarTab">
                         <a href="#" wicket:id="link" role="tab" aria-controls="schedPanel"><span wicket:id="label">[ Upcoming ]</span></a>
                     </li>
@@ -26,20 +26,20 @@
                 <div class="panel" wicket:id="haveLinks">
                     <ul class="itemList">
                         <li class="row-fluid" id="item1" wicket:id="calendarItems">
-                            <div class="one date span4">
+                            <div class="one date span2">
                                 <span wicket:id="calendarDate">[Date]</span>
                                 <span wicket:id="itemType" class="itemType" style="display:none;">[item type]</span>
                                 <span wicket:id="itemCount" class="itemCount" style="display:none;">[item count]</span>
                                 <span wicket:id="entityReference" class="entityReference" style="display:none;">[entity reference]</span>
                             </div>
-                            <div class="tab two span4">
+                            <div class="tab two span6">
                                 <img wicket:id="icon" class="itemIcon"/><a href="#" wicket:id="itemLink" class="itemLink" target="_top"><span wicket:id="itemTitle">[ Item Title ]</span><span wicket:id="itemClick" class="skip">[ (click to view details) ]</span></a>
-                                <span wicket:id="itemLabel" class="itemLabel">[Item Label]</span>
+                                <span wicket:id="itemLabel" class="itemLabel muted">[Item Label]</span>
                             </div>
-                            <div class="three span2">
+                            <div class="three span3">
                                 <a href="#" wicket:id="siteLink" class="siteLink" target="_top">[Site Title]</a>
                             </div>
-                            <div class="action four span2">
+                            <div class="action four span1">
                                 <a href="#" wicket:id="starringAction"><img wicket:id="starringActionIcon" alt="[ Star/Unstar This ]" src="#" /></a>
                                 <a href="#" wicket:id="hidingAction"><img wicket:id="hidingActionIcon" alt="[ Hide/Show This ]" src="#" /></a>
                             </div>
