--- a/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
@@ -4,7 +4,7 @@
         <div id="activeNewsItems" wicket:id="newsLinksDiv" class="mainPanel"  role="application" aria-labelledby="newsHead">
             <div class="listHeader">
                 <h3 id="newsHead" class="withNav" wicket:id="newsTitle">[[ Recent Activity ]]</h3>
-                <ul class="tabPanel" role="tabpanel">
+                <ul class="nav nav-tabs" role="tabpanel">
                     <li wicket:id="currentNewsTab">
                         <a href="#" wicket:id="link" role="tab" aria-controls="newsPanel"><span wicket:id="label">[ Current ]</span></a>
                     </li>
@@ -29,22 +29,22 @@
                                 <span wicket:id="entityReference" class="entityReference">[entity reference]</span>
                                 <span class="offset">0</span>
                             </div>
-                            <div class="two date span4" style="margin-left:0">
+                            <div class="two date span2" style="margin-left:0">
                                 <span wicket:id="newsTime">[news time]</span>
                             </div>
-                            <div class="tab three  span4">
+                            <div class="tab three  span6">
                                 <img wicket:id="icon" class="itemIcon"/>
                                 <a href="#" wicket:id="itemLink" class="itemLink" target="_top">
                                 	<span wicket:id="itemTitle">[ Item Title ]</span>
                                 	<span wicket:id="itemClick" class="skip">[ (click to view details) ]</span>
                                 </a>
-                                <span wicket:id="itemLabel">[Item Label]</span>
+                                <span class="muted"><span wicket:id="itemLabel" class="muted">[Item Label]</span></span>
                                 <!-- class="itemLabel" will be added programmatically unless label is empty -->
                             </div>
-                            <div class="four  span2">
+                            <div class="four  span3">
                                 <a href="#" wicket:id="siteLink" class="siteLink" target="_top">[site title]</a>
                             </div>
-                            <div class="action five span2">
+                            <div class="action five span1">
                                 <a href="#" wicket:id="starringAction"><img wicket:id="starringActionIcon" alt="[ Star/Unstar This ]" src="#" /></a>
                                 <a href="#" wicket:id="hidingAction"><img wicket:id="hidingActionIcon" alt="[ Hide/Show This ]" src="#" /></a>
                             </div>
