DASH-274 - initial checkin with JQ Mobile view
git-svn-id: https://source.sakaiproject.org/svn/dashboard/branches/DASH-269@313481 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/BasePage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/BasePage.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd" >
  
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title><wicket:message key="page.title" /></title>
 	</head>     
 	<body>
