--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
@@ -19,14 +19,11 @@
                     </script>
                     <script type="text/javascript" src="jqm/jquery.mobile-1.3.1.min.js">
                     </script>
-                    <script type="text/javascript" src="jqm/js/consolelog.min.js">
-                    </script>
-                    <h4>This is mobile view</h4>
                     <div id="messagePanel" style="display:none">
                     </div>
                     <div id="messageError" style="display:none">
                     </div>
-                    <div id="motdPanel" wicket:id="motdPanel" class="motdPanel">
+                    <div id="motdPanel" wicket:id="motdPanel" class="motdPanel" style="display:none">
                     </div>
                     <!-- start of assignments and events page -->
                     <div data-role="page" id="events">
@@ -129,6 +126,9 @@
                     <span id="genericErrorMessage" wicket:id="genericErrorMessage" style="display:none">[[ You may have logged out or the item is no longer available. ]]</span>
                     <script type="text/javascript">
                         $(document).ready(function(){
+                            if ($('.mobilePage').length) {
+                                $('.itemLink').attr('href', '#itemEvent');
+                            }
                             setupTableStriping()
                             $('.pager').htmlClean();
                             $('.pager').cssInstrument();
