--- a/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
@@ -33,7 +33,9 @@
                                 <span wicket:id="entityReference" class="entityReference" style="display:none;">[entity reference]</span>
                             </div>
                             <div class="tab two span6">
-                                <img wicket:id="icon" class="itemIcon"/><a href="#" wicket:id="itemLink" class="itemLink" target="_top"><span wicket:id="itemTitle">[ Item Title ]</span><span wicket:id="itemClick" class="skip">[ (click to view details) ]</span></a>
+                                <img wicket:id="icon" class="itemIcon"/>
+                                <!--<a href="#itemEvent" class="itemLink" target="_top">[ Item Title ]</a>-->
+                                <a href="#" wicket:id="itemLink" class="itemLink" target="_top"><span wicket:id="itemTitle">[ Item Title ]</span><span wicket:id="itemClick" class="skip">[ (click to view details) ]</span></a>
                                 <span wicket:id="itemLabel" class="itemLabel muted">[Item Label]</span>
                             </div>
                             <div class="three span3">
