DASH-274 - render multiples and collections on mobile view, fix starring and hiding actions not working because of DOM changes
git-svn-id: https://source.sakaiproject.org/svn/dashboard/branches/DASH-269@313484 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
@@ -27,7 +27,7 @@
                     </div>
                     <!-- start of assignments and events page -->
                     <div data-role="page" id="events">
-                        <div data-role="popup" id="dashMenuEvents" class="slideMenuPanel" data-corners="false" data-theme="a" data-shadow="true" data-tolerance="0,0">
+                        <div data-role="popup" id="dashMenuEvents" class="slideMenuPanel" data-corners="false" data-theme="a" data-shadow="true" data-tolerance="0,15,30,15">
                             <div data-role="" data-theme="a" data-corners="false" class="slideMenu">
                                 <a href="#events" data-role="button" data-mini="true" data-corners="false" data-shadows="false" data-theme="x">Show All</a>
                                 <a href="#starred" data-role="button" data-mini="true" data-corners="false" data-shadows="false" data-transition="fade" data-theme="x">Starred</a>
@@ -61,7 +61,7 @@
                     </div>
                     <!--start of recent activity -->
                     <div data-role="page" id="activ">
-                        <div data-role="popup" id="dashMenuActiv" class="slideMenuPanel" data-corners="false" data-theme="a" data-shadow="true" data-tolerance="0,0">
+                        <div data-role="popup" id="dashMenuActiv" class="slideMenuPanel" data-corners="false" data-theme="a" data-shadow="true" data-tolerance="0,15,30,15">
                             <div data-role="" data-theme="a" data-corners="false" class="slideMenu">
                                 <a href="#events" data-role="button" data-mini="true" data-corners="false" data-shadows="false" data-theme="x">Show All</a>
                                 <a href="#starred" data-role="button" data-mini="true" data-corners="false" data-shadows="false" data-transition="fade" data-theme="x">Starred</a>
@@ -74,7 +74,7 @@
                                     <h1 role="heading" aria-level="1" class="ui-title navtopTitleHeader">CTools Dashboard</h1>
                                 </div>
                                 <div class="ui-block-d slideMenuControlWrap">
-                                    <a href="#dashMenuActiv" class="menuControl" data-rel="popup"><strong>&#9776;</strong></a>
+                                    <a href="#dashMenuActiv" class="menuControl" data-rel="popup" data-transition="slide"><strong>&#9776;</strong></a>
                                 </div>
                             </div>
                             <div data-role="navbar" class="tabnav">
@@ -96,7 +96,7 @@
                     </div>
                     <!--/page end of  start of item details page -->
                     <div data-role="page" id="itemEvent">
-                        <div data-role="popup" id="dashMenuItemEvent" class="slideMenuPanel" data-corners="false" data-theme="a" data-shadow="true" data-tolerance="0,0">
+                        <div data-role="popup" id="dashMenuItemEvent" class="slideMenuPanel" data-corners="false" data-theme="a" data-shadow="true" data-tolerance="0,15,30,15">
                             <div data-role="" data-theme="a" data-corners="false" class="slideMenu">
                                 <a href="#events" data-role="button" data-mini="true" data-corners="false" data-shadows="false" data-theme="x">Show All</a>
                                 <a href="#starred" data-role="button" data-mini="true" data-corners="false" data-shadows="false" data-transition="fade" data-theme="x">Starred</a>
@@ -107,10 +107,10 @@
                             <div class="ui-grid-a navtop">
                                 <a href="#" data-icon="arrow-l" data-rel="back" class="ui-icon ui-icon-arrow-l itemHeaderBack" data-transition="slide" data-direction="reverse"></a>
                                 <div class="ui-block-a navtopTitle">
-                                    <h1 role="heading" aria-level="1" class="ui-title navtopTitleHeader">CTools Dashboard -- item view</h1>
+                                    <h1 role="heading" aria-level="1" class="ui-title navtopTitleHeader">CTools Dashboard</h1>
                                 </div>
                                 <div class="ui-block-d slideMenuControlWrap">
-                                    <a href="#dashMenuItemEvent" class="menuControl" data-rel="popup"><strong>&#9776;</strong></a>
+                                    <a href="#dashMenuItemEvent" class="menuControl" data-rel="popup" data-transition="slide"><strong>&#9776;</strong></a>
                                 </div>
                             </div>
                         </header>
