DASH-274 - show item details in collection inline
git-svn-id: https://source.sakaiproject.org/svn/dashboard/branches/DASH-269@313486 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
@@ -128,6 +128,8 @@
                         $(document).ready(function(){
                             if ($('.mobilePage').length) {
                                 $('.itemLink').attr('href', '#itemEvent');
+                                //$('#activ .nav-tabs a').attr('href', '#activ');
+                                //$('#events .nav-tabs a').attr('href', '#events');
                             }
                             setupTableStriping()
                             $('.pager').htmlClean();
