DASH-288 - stub in method for handling paging in mobile view
git-svn-id: https://source.sakaiproject.org/svn/dashboard/branches/DASH-269@313527 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
@@ -19,6 +19,8 @@
                     </script>
                     <script type="text/javascript" src="jqm/jquery.mobile-1.3.1.min.js">
                     </script>
+                    <script type="text/javascript" src="jqm/js/mob-dash.js">
+                    </script>
                     <div id="messagePanel" style="display:none">
                     </div>
                     <div id="messageError" style="display:none">
