DASH-288 - ore subs for paging
git-svn-id: https://source.sakaiproject.org/svn/dashboard/branches/DASH-269@313528 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
@@ -51,6 +51,7 @@
                         </li>
                     </ul>
                 </div>
+                <a href="#" id="newsMoreDummyButton" data-role="button">Get more</a>
                 <div wicket:id="haveNoLinks">
                     <p wicket:id="message">
                         [[ I got nothing for ya. ]]
