DASH-288 - adding paging. Note: old pager is left in for debugging, starring has not been hidden yet
git-svn-id: https://source.sakaiproject.org/svn/dashboard/branches/DASH-269@313531 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/CalendarLinksPanel.html
@@ -18,10 +18,11 @@
                         <a href="#" wicket:id="link" role="tab" aria-controls="schedPanel"><span wicket:id="label">[ Past ]</span></a>
                     </li>
                 </ul>
-                <div class="pagerCell">
-                    <!-- <span class="itemCount instruction" wicket:id="calendarLinksCount">[[ cero puntos ]]</span>  --><span class="pager" style="float:right" wicket:id="calendarNavigator"></span>
-                </div>
             </div>
+            <div class="pagerCell">
+                <!-- <span class="itemCount instruction" wicket:id="calendarLinksCount">[[ cero puntos ]]</span>  --><span class="pager" style="float:right" wicket:id="calendarNavigator"></span>
+            </div>
+
             <div id ="schedPanel" tabindex="-1">
                 <div class="panel" wicket:id="haveLinks">
                     <ul class="itemList">
@@ -48,6 +49,7 @@
                         </li>
                     </ul>
                 </div>
+                <a href="#" style="display:none" data-role="button" id="calendarMoreDummyButton">Get more</a>
                 <div wicket:id="haveNoLinks">
                     <p wicket:id="message">
                         [[ I got nothing for ya. ]]
