--- a/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/NewsLinksPanel.html
@@ -51,7 +51,7 @@
                         </li>
                     </ul>
                 </div>
-                <a href="#" id="newsMoreDummyButton" data-role="button">Get more</a>
+                <a href="#" style="display:none" data-role="button" id="newsMoreDummyButton">Get more</a>
                 <div wicket:id="haveNoLinks">
                     <p wicket:id="message">
                         [[ I got nothing for ya. ]]
