--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
@@ -38,7 +38,7 @@
                         <header data-role="header" class="ctheader">
 							<a href="#" data-icon="arrow-l" data-theme="b"
 								style="text-decoration: none; color: inherit;" target="_parent" class="backToSiteButton"><span
-								class="backToSiteButtonLabel">[backToSiteButton]</span></a>
+								class="backToSiteButtonLabel">Site</span></a>
 							<div class="ui-grid-a navtop">
                                 <div class="ui-block-a navtopTitle">
                                     <h1 role="heading" aria-level="1" class="ui-title navtopTitleHeader">Dashboard</h1>
@@ -72,9 +72,9 @@
                             </div>
                         </div>
                         <header data-role="header" class="ctheader">
-							<a href="#" data-icon="arrow-l" data-theme="b"
+							<a href="#" data-icon="arrow-l" data-theme="b" data-iconpos="notext"
 								style="text-decoration: none; color: inherit;" target="_parent" class="backToSiteButton"><span
-								class="backToSiteButtonLabel">[backToSiteButton]</span></a>
+								class="backToSiteButtonLabel">Site</span></a>
                             <div class="ui-grid-a navtop">
                                 <div class="ui-block-a navtopTitle">
                                     <h1 role="heading" aria-level="1" class="ui-title navtopTitleHeader">Dashboard</h1>
@@ -145,23 +145,6 @@
                             setupLang(); //evaluate the language held in #lang-holder for use in the js
                             setupIcons();
                             setupDismissMOTD();
-
-                            // Set text and href of jQuery Mobile back buttons using
-                            // values from Sakai navigation buttons, which are hidden.
-                            var currentSiteLink = $('ul#pda-portlet-menu li.currentSiteLink span a');
-                            var currentSiteLinkText = currentSiteLink.text();
-                            var currentSiteLinkHref = currentSiteLink.attr('href');
-                            $('.backToSiteButtonLabel')
-                            	.text(currentSiteLinkText);
-                            $('.backToSiteButton')
-                            	.attr('href', currentSiteLinkHref);
-                            
-                            // Set titles using value from Sakai navigation.
-                            // Supports future tool localization and name changes.
-                            var currentToolTitle = $('ul#pda-portlet-menu li.currentToolTitle span').text();
-                            $('h1.navtopTitleHeader')
-                            	.text(currentToolTitle);
-                            document.title = currentToolTitle;  // Fix title that was set by jQuery Mobile
                         });
                     </script>
                     <div wicket:id="callbackUrl" class="callBackUrl skip">
