--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
@@ -72,7 +72,7 @@
                             </div>
                         </div>
                         <header data-role="header" class="ctheader">
-							<a href="#" data-icon="arrow-l" data-theme="b" data-iconpos="notext"
+							<a href="#" data-icon="arrow-l" data-theme="b"
 								style="text-decoration: none; color: inherit;" target="_parent" class="backToSiteButton"><span
 								class="backToSiteButtonLabel">Site</span></a>
                             <div class="ui-grid-a navtop">
