--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
@@ -2,26 +2,22 @@
 <html xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
+		<wicket:head>
+			<wicket:link>
+				<link rel="stylesheet" type="text/css" href="jqm/jquery.mobile-1.3.1.min.css" />
+				<link rel="stylesheet" type="text/css" href="jqm/css/mob-dash.css" />
+			</wicket:link>
+			<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+			<script type="text/javascript" src="js/dashboard.js"></script>
+			<script type="text/javascript" src="jqm/jquery.mobile-1.3.1.min.js"></script>
+			<script type="text/javascript" src="jqm/js/mob-dash.js"></script>
+		</wicket:head>
+	</head>
     <body>
         <wicket:extend>
             <div class="portletBody mobilePage">
                 <div wicket:id="dashboard-page">
-                    <!--
-                    TODO: These script and link tags need to be moved to the head tag.
-                    Wicket can include them in the head tag if done properly from the java code.
-                    -->
-                    <link rel="stylesheet" type="text/css" href="jqm/jquery.mobile-1.3.1.min.css" />
-                    <link rel="stylesheet" type="text/css" href="jqm/css/mob-dash.css" />
-                    <script src="http://code.jquery.com/jquery-1.7.2.min.js">
-                    </script>
-                    <script type="text/javascript" src="js/dashboard.js">
-                    </script>
-                    <script type="text/javascript" src="jqm/jquery.mobile-1.3.1.min.js">
-                    </script>
-                    <script type="text/javascript" src="jqm/js/mob-dash.js">
-                    </script>
-                    <div id="messagePanel" style="display:none">
+                     <div id="messagePanel" style="display:none">
                     </div>
                     <div id="messageError" style="display:none">
                     </div>
