DASH-277 - make whole item area clickable, disable site link link
git-svn-id: https://source.sakaiproject.org/svn/dashboard/branches/DASH-269@313540 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
@@ -29,7 +29,7 @@
                             </div>
                         </div>
                         <header data-role="header" class="ctheader">
-							<a href="#" data-icon="arrow-l" data-theme="b"
+							<a href="#" data-icon="arrow-l" data-theme="f"
 								style="text-decoration: none; color: inherit;" target="_parent" class="backToSiteButton"><span
 								class="backToSiteButtonLabel">Site</span></a>
 							<div class="ui-grid-a navtop">
@@ -65,7 +65,7 @@
                             </div>
                         </div>
                         <header data-role="header" class="ctheader">
-							<a href="#" data-icon="arrow-l" data-theme="b"
+							<a href="#" data-icon="arrow-l" data-theme="f"
 								style="text-decoration: none; color: inherit;" target="_parent" class="backToSiteButton"><span
 								class="backToSiteButtonLabel">Site</span></a>
                             <div class="ui-grid-a navtop">
