DASH-312 - remove vspace from MOTD display
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313586 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/java/org/sakaiproject/dash/tool/panels/MOTDPanel.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/panels/MOTDPanel.html
@@ -3,9 +3,8 @@
     <wicket:panel>
         <div id="motdTextDiv" wicket:id="motdTextDiv">
         	<span wicket:id="motdId" class="motdId" style="display:none;">XXX</span>
-           	<a id="motdTextDivDismiss" href="#" title="Hide this message for the session">x</a> 
-           	<h3 wicket:id="motdPanelTitle">[[ Message of the day ]]</h3> 
-            <h4 wicket:id="motdTitle">[[ MOTD Title ]]</h4>
+           	<a id="motdTextDivDismiss" href="#" title="Hide this message for the session">&times;</a>  
+            <h3 wicket:id="motdTitle">[[ MOTD Title ]]</h3>
             <div id="motdText" class="motdText" wicket:id="motdText">
             	[[ Text of latest MOTD ]]
             </div>
