--- a/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
+++ b/tool/src/java/org/sakaiproject/dash/tool/pages/DashboardMobilePage.html
@@ -10,7 +10,7 @@
                 <div wicket:id="dashboard-page">
                     <link rel="stylesheet" type="text/css" href="jqm/jquery.mobile-1.3.1.min.css" />
                     <link rel="stylesheet" type="text/css" href="jqm/css/mob-dash.css" />
-                    <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+                    <script src="//code.jquery.com/jquery-1.7.2.min.js"></script>
                     <script type="text/javascript" src="js/dashboard.js"></script>
                     <script type="text/javascript" src="jqm/jquery.mobile-1.3.1.min.js"></script>
                     <script type="text/javascript" src="jqm/js/mob-dash.js"></script>
